feat: getAllProponents + small docs fix
